[gd_scene load_steps=8 format=3 uid="uid://cifv82drada17"]

[ext_resource type="Script" path="res://test/pid_controller.gd" id="1_8sv7x"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1crp5"]
size = Vector3(200, 1, 200)

[sub_resource type="BoxMesh" id="BoxMesh_mhy1q"]
size = Vector3(200, 1, 200)

[sub_resource type="BoxShape3D" id="BoxShape3D_rrcu7"]

[sub_resource type="BoxMesh" id="BoxMesh_cyfsl"]

[sub_resource type="SphereMesh" id="SphereMesh_dw7y5"]
radius = 0.4
height = 0.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h6f0a"]
albedo_color = Color(0.737255, 0.109804, 0.380392, 1)

[node name="pid_test" type="Node3D"]

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_1crp5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D/CollisionShape3D"]
mesh = SubResource("BoxMesh_mhy1q")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.395369, 0.918522, 0, -0.918522, 0.395369, 0, 1.96435, 0)
shadow_enabled = true

[node name="RigidBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mass = 20.0
script = ExtResource("1_8sv7x")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
shape = SubResource("BoxShape3D_rrcu7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D/CollisionShape3D"]
mesh = SubResource("BoxMesh_cyfsl")

[node name="Node" type="Node" parent="RigidBody3D"]

[node name="debug" type="MeshInstance3D" parent="RigidBody3D/Node"]
mesh = SubResource("SphereMesh_dw7y5")
surface_material_override/0 = SubResource("StandardMaterial3D_h6f0a")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.866025, -0.12941, 0.482963, 0, 0.965926, 0.258819, -0.5, -0.224144, 0.836516, 5.61722, 10.9001, 10.3007)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 45.0
offset_top = -79.0
offset_right = 288.0
offset_bottom = 84.0
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Target Position"

[node name="target_slider" type="HSlider" parent="PanelContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 20.0
step = 0.01

[node name="Label2" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "K_P"

[node name="kp_slider" type="HSlider" parent="PanelContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 2.0
step = 0.01
tick_count = 5
ticks_on_borders = true

[node name="Label3" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "K_I"

[node name="ki_slider" type="HSlider" parent="PanelContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 2.0
step = 0.01
tick_count = 5
ticks_on_borders = true

[node name="Label4" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "K_D"

[node name="kd_slider" type="HSlider" parent="PanelContainer/GridContainer"]
layout_mode = 2
max_value = 2.0
step = 0.01
tick_count = 5
ticks_on_borders = true

[node name="Label5" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Force"

[node name="force_slider" type="HSlider" parent="PanelContainer/GridContainer"]
layout_mode = 2
min_value = 1.0
max_value = 1200.0
value = 1.0
tick_count = 7
ticks_on_borders = true

[node name="Label6" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Mass"

[node name="mass_slider" type="HSlider" parent="PanelContainer/GridContainer"]
layout_mode = 2
min_value = 1.0
max_value = 640.0
value = 1.0
tick_count = 8
ticks_on_borders = true

[connection signal="value_changed" from="PanelContainer/GridContainer/target_slider" to="RigidBody3D" method="_on_target_slider_changed"]
[connection signal="value_changed" from="PanelContainer/GridContainer/kp_slider" to="RigidBody3D" method="_on_kp_slider_changed"]
[connection signal="value_changed" from="PanelContainer/GridContainer/ki_slider" to="RigidBody3D" method="_on_ki_slider_changed"]
[connection signal="value_changed" from="PanelContainer/GridContainer/kd_slider" to="RigidBody3D" method="_on_kd_slider_changed"]
[connection signal="value_changed" from="PanelContainer/GridContainer/force_slider" to="RigidBody3D" method="_on_force_slider_changed"]
[connection signal="value_changed" from="PanelContainer/GridContainer/mass_slider" to="RigidBody3D" method="_on_mass_slider_changed"]
